--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
 <body>
 
 <header>
-    <h1>Halo, Saya [Nama Kamu]</h1>
-    <p>Selamat datang di website pertama saya!</p>
+    <h1>Halo, Saya [Herry Kurniawan]</h1>
+    <p>Selamat datang di website saya!</p>
 </header>
 
 <section>
     <h2>Tentang Saya</h2>
     <div class="card">
-        <p>Saya sedang belajar membuat website dengan bantuan AI. Ini adalah langkah awal saya untuk hadir secara digital di dunia internet.</p>
+        <p>Saya adalah seorang individu yang antusias dalam mempelajari teknologi baru. Website ini adalah bukti keberanian saya mengeksplorasi dunia digital, mulai dari koding dasar hingga publikasi secara mandiri. Saya percaya bahwa cara terbaik untuk belajar adalah dengan cara mencoba langsung.".</p>
     </div>
 
     <h2>Keahlian / Hobi</h2>
     <ul>
-        <li>Desain Grafis</li>
-        <li>Menulis Blog</li>
-        <li>Fotografi</li>
+        <li>Eksplorasi Teknologi: Senang mencoba gadget, aplikasi, atau bahasa pemrograman baru.</li>
+        <li>Gaming / Digital Entertainment: Memahami tren hiburan masa kini.</li>
+        <li>Traveling: Mencari inspirasi dari tempat-tempat baru.</li>
     </ul>
 
     <br>
-    <a href="mailto:emailmu@gmail.com" class="btn">Hubungi Saya</a>
+    <a href="mailto:hbikwmedan@gmail.com" class="btn">Hubungi Saya</a>
 </section>
 
 <footer>
-    <p>&copy; 2026 Dibuat dengan antusiasme.</p>
+    <p>&copy; 2026 HERRY KURNAWAN.</p>
 </footer>
 
 </body>
